--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.jsx",
   "scripts": {
-    "start": "webpack-dev-server --mode=development",
-    "start-prod": "webpack --mode=production"
+    "start": "parcel src/index.html"
   },
   "author": "Visionist, Inc",
   "license": "ISC",
   "dependencies": {
+    "parcel-bundler": "^1.10.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
@@ -27,6 +27,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "postcss-modules": "^1.4.1",
     "prettier": "^1.14.3"
   },
   "babel": {
