--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "parcel-bundler": "^1.10.1",
+    "posthtml-favicons": "^1.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
