--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "parcel-bundler": "^1.10.1",
+    "postcss-import": "^12.0.0",
     "posthtml-favicons": "^1.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
@@ -26,7 +27,6 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "postcss-modules": "^1.4.1",
     "prettier": "^1.14.3"
