--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "leaflet": "^1.3.4",
     "parcel-bundler": "^1.10.1",
     "postcss-import": "^12.0.0",
     "posthtml-favicons": "^1.2.0",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-leaflet": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
